[package]
name = "mirrorverse"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.0.0-beta.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.3"
slug = "0.1"
